# vreen

./: .directory  .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  README.md  appveyor.yml  vk.pc.cmake  vk.pro  vkit.pc.cmake  vkit.qbp  vkkit.qbp  vreen.pri  vreen.pro  vreen.qbp  vreen.qbs
api/: Makefile  api.pro  client.cpp  client.h  client_p.h  connection.cpp  connection.h  directconnection.cpp  directconnection_p.h  json.cpp  longpoll.cpp  longpoll.h  longpoll_p.h  reply.cpp  reply.h  reply_p.h  vk_global.h
cmake/: CommonUtils.cmake
examples/: CMakeLists.txt  examples.qbs
examples/cpp/: CMakeLists.txt  main.cpp  phonefetcher.cpp
examples/cpp/phonefetcher/: CMakeLists.txt  main.cpp  phonefetcher.cpp  phonefetcher.h  phonefetcher.qbs
examples/declarative/: CMakeLists.txt  declarativeview.cpp  declarativeview.h  main.cpp
examples/declarative/audio/: CMakeLists.txt
examples/declarative/audio/qml/: main.qml
examples/declarative/common/: declarativeview.cpp  declarativeview.h  main.cpp
examples/declarative/dialogs/: CMakeLists.txt
examples/declarative/dialogs/qml/: main.qml
examples/declarative/photoalbum/: CMakeLists.txt
examples/declarative/photoalbum/qml/: PageHeaderBar.qml  PhotoAlbum.qml  main.qml
examples/declarative/qml/: main.qml
examples/quick/: QuickExample.qbs
examples/quick/audio/: audio.qbs
examples/quick/audio/qml/: ScrollDecorator.qml  main.qml
examples/quick/common/: declarativeview.cpp  declarativeview.h  main.cpp
examples/quick/dialogs/: dialogs.qbs
examples/quick/dialogs/qml/: main.qml
features/: vk.prf
modules/vreen/core/: core.qbs
modules/vreencore/: vreencore.qbs
qbs/: VreenProduct.qbs
qbs/modules/qt/webkitwidgets/: webkitwidgets.qbs
qbs/modules/vreen/core/: core.qbs
qbs/modules/vreen/imports/: imports.qbs
src/: .directory  CMakeLists.txt  api.qbp  api.qbs  k8json.qbp  src.pro  vk.qbp  vkit.qbp  vreen.qbp
src/api/: CMakeLists.txt  abstractlistmodel.cpp  abstractlistmodel.h  api.pro  attachment.cpp  attachment.h  audio.cpp  audio.h  audioitem.cpp  audioitem.h  buddy.cpp  buddy.h  buddy_p.h  chatsession.cpp  chatsession.h  chatsession_p.h  client.cpp  client.h  client_p.h  commentssession.cpp  commentssession.h  connection.cpp  connection.h  contact.cpp  contact.h  contact_p.h  contentdownloader.cpp  contentdownloader.h  contentdownloader_p.h  directconnection.cpp  directconnection_p.h  dynamicpropertydata.cpp  dynamicpropertydata_p.h  groupchatsession.cpp  groupchatsession.h  groupmanager.cpp  groupmanager.h  json.cpp  json.h  localstorage.cpp  (+40 more)
src/auth/: auth.qbs
src/auth/direct/: CMakeLists.txt  directauth.qbs  directconnection.cpp  directconnection_p.h
src/auth/widget/: CMakeLists.txt  oauth.qbs  oauthconnection.cpp  oauthconnection.h
src/directauth/: CMakeLists.txt  directauth.qbs  directconnection.cpp  directconnection_p.h  vreendirectauth.pc.cmake
src/oauth/: CMakeLists.txt  oauth.qbp  oauth.qbs  oauthconnection.cpp  oauthconnection.h  vkitoauth.pc.cmake  vreenoauth.pc.cmake
src/qml/: CMakeLists.txt  qml.qbp  qml.qbs  vreenplugin_qt4.cpp  vreenplugin_qt4.h  vreenplugin_qt5.cpp
src/qml/qmldir/: qmldir
src/qml/src/: audiomodel.cpp  audiomodel.h  buddymodel.cpp  buddymodel.h  chatmodel.cpp  chatmodel.h  clientimpl.cpp  clientimpl.h  commentsmodel.cpp  commentsmodel.h  contactsmodel.cpp  contactsmodel.h  dialogsmodel.cpp  dialogsmodel.h  newsfeedmodel.cpp  newsfeedmodel.h  vkitqmlplugin.h  vreenplugin.cpp  wallmodel.cpp  wallmodel.h
tests/: CMakeLists.txt  tests.pro  tests.qbs
tests/auto/: CMakeLists.txt  VreenTest.qbs  auto.pro
tests/auto/LongPoll/: CMakeLists.txt  LongPoll.pro  tst_longpoll.cpp  tst_longpolltest.cpp
tests/auto/NewsModel/: NewsModel.pro  tst_newsmodeltest.cpp
tests/auto/Roster/: CMakeLists.txt  Roster.pro  tst_roster.cpp  tst_rostertest.cpp
tests/auto/connection/: CMakeLists.txt  connection.pro  connection.qbs  tst_connection.cpp  tst_connectiontest.cpp
tests/common/: utils.h
tests/manual/: manual.pro
