if(NOT VREEN_INSTALL_HEADERS)
    set(INTERNAL_FLAG "INTERNAL")
endif()
if(VREEN_DEVELOPER_BUILD)
	set(DEVELOPER_FLAG "DEVELOPER")
endif()

add_subdirectory(api)
if(VREEN_WITH_QMLAPI)
    add_subdirectory(qml)
endif()
if(VREEN_WITH_AUTH_WIDGET)
    add_subdirectory(auth/widget)
endif()
if(VREEN_WITH_DIRECTAUTH)
    add_subdirectory(auth/direct)
endif()
